--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "remark-html": "^14.0.0",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
+    "sharp": "^0.29.0",
     "shiki": "^0.9.6",
     "unified": "^10.1.0"
   },
