--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
-    "baseUrl": ".",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "inlineSourceMap": true,
@@ -27,7 +26,12 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "paths": {
+      "#components/*": ["components/*"],
+      "#utils/*": ["utils/*"]
+    }
   },
   "include": ["pages", "utils"],
   "exclude": ["node_modules"]
