--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["eslint:recommended", "next", "prettier"]
+  "extends": ["eslint:recommended", "next", "prettier"],
+  "rules": {
+    "@next/next/no-img-element": "off"
+  }
 }
