--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "11.1.0",
     "next-mdx-remote": "3.0.4",
     "next-seo": "4.26.0",
+    "p-limit": "^3.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rehype-katex": "6.0.1",
