--- a/package.json
+++ b/package.json
@@ -28,17 +28,15 @@
     "@tailwindcss/typography": "^0.4.1",
     "gray-matter": "^4.0.3",
     "next": "11.1.0",
+    "next-mdx-remote": "^3.0.4",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "rehype-raw": "^6.0.0",
-    "rehype-stringify": "^9.0.1",
-    "remark-html": "^14.0.0",
-    "remark-parse": "^10.0.0",
-    "remark-rehype": "^9.0.0",
     "sharp": "^0.29.0",
     "shiki": "^0.9.6",
-    "unified": "^10.1.0"
+    "undici": "^4.4.4",
+    "unified": "^10.1.0",
+    "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.18",
