add blogs & news page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm": ">=7.x"
   },
   "dependencies": {
+    "@octokit/rest": "^18.9.1",
     "@stefanprobst/remark-shiki": "^1.1.1",
     "@tailwindcss/typography": "^0.4.1",
     "gray-matter": "^4.0.3",
