--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "remark-rehype": "^9.0.0",
     "sharp": "^0.29.0",
     "shiki": "^0.9.6",
+    "undici": "^4.4.4",
     "unified": "^10.1.0"
   },
   "devDependencies": {
