Revert "Merge pull request #14 from lamualfa/master"
This reverts commit 9cbcf4603ea63f2b538fadb895414aefc0e3ea7f, reversing
changes made to b996489bcb476415844a75c5380e9f68c8464a30.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,6 @@
       "#utils/*": ["utils/*"]
     }
   },
-  "include": ["pages", "utils", "api"],
+  "include": ["pages", "utils"],
   "exclude": ["node_modules"]
 }
