--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "remark-gfm": "^2.0.0",
+    "remark-html-katex": "^4.0.1",
     "sharp": "^0.29.0",
     "shiki": "^0.9.6",
     "undici": "^4.4.4",
