--- a/package.json
+++ b/package.json
@@ -21,35 +21,37 @@
     "npm": ">=7.x"
   },
   "dependencies": {
-    "@fontsource/jetbrains-mono": "^4.5.0",
-    "@fontsource/lusitana": "^4.5.0",
-    "@fontsource/sarabun": "^4.5.0",
-    "@stefanprobst/remark-shiki": "^1.1.1",
-    "@tailwindcss/typography": "^0.4.1",
-    "gray-matter": "^4.0.3",
+    "@fontsource/jetbrains-mono": "4.5.0",
+    "@fontsource/lusitana": "4.5.0",
+    "@fontsource/sarabun": "4.5.0",
+    "@stefanprobst/remark-shiki": "1.1.1",
+    "@tailwindcss/typography": "0.4.1",
+    "gray-matter": "4.0.3",
     "next": "11.1.0",
-    "next-mdx-remote": "^3.0.4",
-    "next-seo": "^4.26.0",
+    "next-mdx-remote": "3.0.4",
+    "next-seo": "4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "remark-gfm": "^2.0.0",
-    "remark-html-katex": "^4.0.1",
-    "sharp": "^0.29.0",
-    "shiki": "^0.9.6",
-    "unified": "^10.1.0",
-    "unist-util-visit": "^2.0.3"
+    "rehype-katex": "6.0.1",
+    "remark-gfm": "1.0.0",
+    "remark-math": "3.0.1",
+    "remark-parse": "9.0.0",
+    "sharp": "0.29.0",
+    "shiki": "0.9.6",
+    "unified": "10.1.0",
+    "unist-util-visit": "2.0.3"
   },
   "devDependencies": {
-    "@types/react": "^17.0.18",
-    "autoprefixer": "^10.3.1",
+    "@types/react": "17.0.18",
+    "autoprefixer": "10.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^7.0.1",
-    "postcss": "^8.3.6",
-    "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.7",
-    "typescript": "^4.3.5"
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "husky": "7.0.1",
+    "postcss": "8.3.6",
+    "prettier": "2.3.2",
+    "tailwindcss": "2.2.7",
+    "typescript": "4.3.5"
   }
 }
