--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fontsource/jetbrains-mono": "4.5.0",
     "@fontsource/lusitana": "4.5.0",
     "@fontsource/sarabun": "4.5.0",
+    "@giscus/react": "^1.0.0",
     "@stefanprobst/remark-shiki": "1.1.1",
     "@tailwindcss/typography": "0.4.1",
     "gray-matter": "4.0.3",
