fixed PostCard component not centered at media <430px added Search page and simple api handler for testing added useDebounce hooks for delaying search typing and data fetching added active class to navbar links

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,8 @@
     "paths": {
       "#components/*": ["components/*"],
       "#utils/*": ["utils/*"],
+      "#hooks/*": ["hooks/*"],
+      "#store/*": ["store/*"],
       "#types/*": ["types/*"]
     }
   },
