chore: bump nextjs
- enable swc on dev
- use swc for minification instead of terser

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
       "#utils/*": ["utils/*"],
       "#hooks/*": ["hooks/*"],
       "#types/*": ["types/*"]
-    }
+    },
+    "incremental": true
   },
   "include": ["pages", "utils", "components/FeaturedPost.tsx"],
   "exclude": ["node_modules"]
