--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@tailwindcss/aspect-ratio": "0.2.2",
     "@tailwindcss/typography": "0.4.1",
     "gray-matter": "4.0.3",
-    "next": "11.1.2",
+    "next": "^12.0.1",
     "next-mdx-remote": "3.0.4",
     "next-seo": "4.28.1",
     "p-limit": "3.1.0",
