--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "@fontsource/rubik": "^4.5.0",
     "@giscus/react": "1.0.0",
     "@stefanprobst/remark-shiki": "1.1.1",
-    "@tailwindcss/aspect-ratio": "0.2.2",
-    "@tailwindcss/typography": "0.4.1",
     "gray-matter": "4.0.3",
     "next": "^12.0.1",
     "next-mdx-remote": "3.0.4",
@@ -45,16 +43,18 @@
     "unist-util-visit": "2.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
     "@types/react": "17.0.30",
-    "autoprefixer": "10.3.1",
+    "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "husky": "7.0.2",
-    "postcss": "8.3.9",
+    "postcss": "^8.4.5",
     "prettier": "2.4.1",
-    "tailwindcss": "2.2.17",
+    "tailwindcss": "^3.0.7",
     "typescript": "4.4.4"
   }
 }
