--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@types/node": "^17.0.40",
     "@types/react": "17.0.30",
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
