--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@fontsource/lusitana": "4.5.8",
     "@fontsource/rubik": "^4.5.10",
     "@giscus/react": "2.1.1",
-    "@stefanprobst/remark-shiki": "2.1.0",
     "@svgr/webpack": "^6.3.1",
     "gray-matter": "4.0.3",
     "next": "^12.2.3",
@@ -35,7 +34,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-katex": "6.0.2",
-    "remark-gfm": "3.0.1",
+    "rehype-pretty-code": "^0.3.2",
+    "rehype-raw": "^6.1.1",
     "remark-math": "5.1.1",
     "remark-parse": "10.0.1",
     "sharp": "0.30.7",
