--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fontsource/rubik": "^4.5.10",
     "@giscus/react": "2.1.1",
     "@svgr/webpack": "^6.3.1",
+    "clsx": "^1.2.1",
     "gray-matter": "4.0.3",
     "next": "^12.2.3",
     "next-mdx-remote": "4.1.0",
