--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rehype-raw": "^6.1.1",
     "remark-math": "5.1.1",
     "remark-parse": "10.0.1",
+    "remark-unwrap-images": "^3.0.1",
     "sharp": "0.30.7",
     "shiki": "0.10.1",
     "unified": "10.1.2",
