--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@fontsource/rubik": "^4.5.10",
     "@giscus/react": "2.1.1",
     "@svgr/webpack": "^6.3.1",
+    "cache": "^3.0.0",
+    "clean": "^4.0.2",
     "clsx": "^1.2.1",
     "gray-matter": "4.0.3",
+    "install": "^0.13.0",
     "next": "^12.2.3",
     "next-mdx-remote": "4.1.0",
     "next-seo": "5.5.0",
