feat: berkenalan dengan laravel scout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,6 @@
   "extends": ["eslint:recommended", "next", "prettier"],
   "rules": {
     "@next/next/no-img-element": "off",
-    "react/no-unknown-property": ["error", { "ignore": ["jsx"] }],
+    "react/no-unknown-property": ["error", { "ignore": ["jsx"] }]
   }
 }
