--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,43 +1,43 @@
 name: Check
 
 on:
-  push:
-    branches: ['*']
-  pull_request:
-    branches: ['*']
+    push:
+        branches: ["*"]
+    pull_request:
+        branches: ["*"]
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
+    build:
+        name: Build
+        runs-on: ubuntu-latest
+        timeout-minutes: 15
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v2.1.5
-        with:
-          node-version: 16.x
+            - name: Setup Node
+              uses: actions/setup-node@v2.1.5
+              with:
+                  node-version: 16.x
 
-      - name: Installling dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm install
+            - name: Installling dependencies
+              if: steps.cache.outputs.cache-hit != 'true'
+              run: npm install
 
-      - name: ESLint check
-        run: npm run lint
+            - name: ESLint check
+              run: npm run lint
 
-      - name: Prettier check
-        run: npx prettier --check --ignore-path .gitignore .
+            - name: Prettier check
+              run: npx prettier --check --ignore-path .gitignore .
 
-      - name: Build
-        run: npm run build
+            - name: Build
+              run: npm run build
 
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v1
-        with:
-          languages: javascript
+            - name: Initialize CodeQL
+              uses: github/codeql-action/init@v1
+              with:
+                  languages: javascript
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v1
+            - name: Perform CodeQL Analysis
+              uses: github/codeql-action/analyze@v1
