--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-  "useTabs": false,
-  "endOfLine": "lf",
-  "arrowParens": "always",
-  "semi": true,
-  "tabWidth": 2,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 120
+    "useTabs": false,
+    "endOfLine": "lf",
+    "arrowParens": "always",
+    "semi": true,
+    "tabWidth": 4,
+    "singleQuote": false,
+    "trailingComma": "all",
+    "printWidth": 120
 }
