--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,25 +14,44 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Setup Node
               uses: actions/setup-node@v2.1.5
               with:
-                  node-version: 16.x
+                  node-version: 20.x
 
-            - name: Installling dependencies
-              if: steps.cache.outputs.cache-hit != 'true'
-              run: npm install
+            - name: Install pnpm
+              uses: pnpm/action-setup@v2
+              id: pnpm-install
+              with:
+                  version: latest
+                  run_install: false
+
+            - name: Get pnpm store directory
+              id: pnpm-cache
+              run: |
+                  echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+
+            - uses: actions/cache@v3
+              name: Setup pnpm cache
+              with:
+              path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+              key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+              restore-keys: |
+                  ${{ runner.os }}-pnpm-store-
+
+            - name: Install dependencies
+              run: pnpm install
 
             - name: ESLint check
-              run: npm run lint
+              run: pnpm lint
 
             - name: Prettier check
               run: npx prettier --check --ignore-path .gitignore .
 
             - name: Build
-              run: npm run build
+              run: pnpm build
 
             - name: Initialize CodeQL
               uses: github/codeql-action/init@v1
