--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,32 +14,18 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Setup Node
-              uses: actions/setup-node@v2.1.5
+              uses: actions/setup-node@v4
               with:
                   node-version: 20.x
 
             - name: Install pnpm
               uses: pnpm/action-setup@v2
-              id: pnpm-install
               with:
-                  version: latest
+                  version: 9.0.6
                   run_install: false
-
-            - name: Get pnpm store directory
-              id: pnpm-cache
-              run: |
-                  echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
-
-            - uses: actions/cache@v3
-              name: Setup pnpm cache
-              with:
-                  path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-                  restore-keys: |
-                      ${{ runner.os }}-pnpm-store-
 
             - name: Install dependencies
               run: pnpm install
@@ -52,11 +38,3 @@ jobs:
 
             - name: Build
               run: pnpm build
-
-            - name: Initialize CodeQL
-              uses: github/codeql-action/init@v1
-              with:
-                  languages: javascript
-
-            - name: Perform CodeQL Analysis
-              uses: github/codeql-action/analyze@v1
